<resources>
    <string name="app_name">Brenton_Hauth_Hyungseoklee_COMP304Lab4_Ex1</string>
    <string name="password_err_msg">Must be 8 to 32 characters long</string>
    <string name="username_err_msg">Must be a number with a minimum of 8 digits</string>
    <string name="name_err_msg">Name must only contain letters, hyphens and apostrophes</string>
    <string name="room_err_msg">Room must be a letter and a number (E.g. A-11)</string>
    <string name="last_name_err_msg">Last name must only contain letters</string>
    <string name="department_err_msg">Department must be a minimum of 2 characters</string>
    <string name="edit_text_username_hint">Username</string>
    <string name="edit_text_password_hint">Password</string>
    <string name="edit_text_department_hint">Department</string>
    <string name="edit_text_first_name_hint">First Name</string>
    <string name="edit_text_last_name_hint">Last Name</string>
    <string name="patientId_Form_hint">Enter patient ID</string>
    <string name="login_button_text">Login</string>
    <string name="sign_up_button_txt">Sign Up</string>
    <string name="view_patients">View Patients</string>
    <string name="logout">Logout</string>
    <string name="view_tests">View tests</string>
    <string name="enter_test">Enter tests</string>
    <string name = "update_patient">Update patient</string>
    <string name="edit_patient_button_text">Edit</string>
    <string name="testActivityTitle">Test List</string>
    <string name="button_push">Enter</string>
    <string name="edit_text_testId_hint">Test ID(only integers)</string>
    <string name="edit_text_patientId_hint">Patient ID(only integers)</string>
    <string name="edit_text_patientId_v2_hint">Patient ID (Optional)</string>
    <string name="edit_text_nurseId_hint">Nurse ID(only integers)</string>
    <string name="edit_text_BPL_hint">BPL(only integers)</string>
    <string name="edit_text_BPH_hint">BPH(only integers)</string>
    <string name="edit_text_temperature_hint">Temperature(Float)</string>
    <string name="edit_Text_room_hint">Room number</string>
    <string name="add_test">Add Test</string>
    <string name="add_patient">Add Patient</string>
</resources>